--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html>
 
 <head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+<title>kforsback.github.io</title>
+<!-- <link rel="stylesheet" href="style.css"> -->
 </head>
 
 <body>
+<!-- <script src="index.js"></script> -->
+
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
