--- a/index.html
+++ b/index.html
@@ -1,19 +1,157 @@
 <!DOCTYPE html>
+
 <html>
 
 <head>
+
+<!-- meta -->
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
+<meta name="author" content="Kenneth Forsbäck">
+<meta name="description" content="description">
+<meta name="keywords" content="keyword, keyword, keyword">
+
+<!-- title -->
 <title>kforsback.github.io</title>
-<!-- <link rel="stylesheet" href="style.css"> -->
+
+<!-- stylesheet -->
+<link rel="stylesheet" type="text/css" title="PureCSS"
+	href="purecss/pure-min.css">
+<link rel="stylesheet" type="text/css" title="PureCSS"
+	href="purecss/grids-responsive-min.css">
+<link rel="stylesheet" type="text/css" title="PureCSS"
+	href="media/index.css">
+
+<!-- favicon -->
+<link rel="icon" type="image/png" sizes="32x32"
+	href="favicon/android-chrome-512x512.png">
+<link rel="icon" type="image/png" sizes="32x32"
+	href="favicon/android-chrome-192x192.png">
+<link rel="apple-touch-icon" sizes="180x180"
+	href="favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32"
+	href="favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16"
+	href="favicon/favicon-16x16.png">
+<link rel="icon" type="image/x-icon"
+	href="favicon/favicon.ico">
+<link rel="manifest"
+	href="favicon/site.webmanifest">
+
 </head>
 
 <body>
-<!-- <script src="index.js"></script> -->
 
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<!-- wrapper -->
+<div id="wrapper">
+
+<!-- page -->
+<div id="page">
+
+<h1 style="color: #ba3044;">Kenneth Forsbäck</h1>
+
+<h2>Information</h2>
+
+<!-- menu -->
+<div class="pure-menu centre">
+
+<ul class="pure-menu-list">
+
+<li class="pure-menu-item">
+<a href="" class="pure-menu-link">About</a>
+</li>
+
+<li class="pure-menu-item">
+<a href="" class="pure-menu-link">Happening</a>
+</li>
+
+<li class="pure-menu-item">
+<a href="" class="pure-menu-link">Endeavour</a>
+</li>
+
+<li class="pure-menu-item">
+<a href="" class="pure-menu-link">Presence</a>
+</li>
+
+<li class="pure-menu-item">
+<a href="" class="pure-menu-link">Journal</a>
+</li>
+
+<li class="pure-menu-item">
+<a href="" class="pure-menu-link">Contact</a>
+</li>
+
+<li class="pure-menu-item">
+<a href="" class="pure-menu-link">Abuse</a>
+</li>
+
+</ul>
+
+</div>
+
+<h2>Additional Links</h2>
+
+<!-- menu -->
+<div class="pure-menu centre">
+
+<ul class="pure-menu-list">
+
+<li class="pure-menu-item">
+<a href="" class="pure-menu-link"><span class="bright">@</span> foobar.com</a>
+</li>
+
+<li class="pure-menu-item">
+<a href="" class="pure-menu-link"><span class="bright">@</span> gmail.com</a>
+</li>
+
+<li class="pure-menu-item">
+<a href="" class="pure-menu-link"><span class="bright">@</span> xabber.com</a>
+</li>
+
+</ul>
+
+</div>
+
+<h2>A Spootiful Mind</h2>
+
+<!-- menu -->
+<div class="pure-menu centre">
+
+<ul class="pure-menu-list">
+
+<li class="pure-menu-item">
+<a href="" class="pure-menu-link"><span class="bright">@</span> Discord</a>
+</li>
+
+<li class="pure-menu-item">
+<a href="" class="pure-menu-link"><span class="bright">@</span> Twitter</a>
+</li>
+
+<li class="pure-menu-item">
+<a href="" class="pure-menu-link"><span class="bright">@</span> Steam</a>
+</li>
+
+<li class="pure-menu-item">
+<a href="" class="pure-menu-link"><span class="bright">@</span> GOG</a>
+</li>
+
+<li class="pure-menu-item">
+<a href="" class="pure-menu-link"><span class="bright">@</span> Battle</a>
+</li>
+
+</ul>
+
+</div>
+
+<p style="padding-top: 1rem;"></p>
+
+<p class="centre small"><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac libero sit amet odio imperdiet tincidunt ut ac augue. Fusce lectus massa, tincidunt vel sem vitae, posuere semper leo. Suspendisse mollis mi eget neque bibendum mollis.</em></p>
+
+</div>
+
+</div>
+
 </body>
 
 </html>
