--- a/index.html
+++ b/index.html
@@ -75,22 +75,33 @@
 </li>
 
 <li class="pure-menu-item">
-<a href="" class="pure-menu-link">Journal</a>
-</li>
-
-<li class="pure-menu-item">
 <a href="" class="pure-menu-link">Contact</a>
-</li>
-
-<li class="pure-menu-item">
-<a href="" class="pure-menu-link">Abuse</a>
 </li>
 
 </ul>
 
 </div>
 
-<h2>Additional Links</h2>
+<h2>Personal</h2>
+
+<!-- menu -->
+<div class="pure-menu centre">
+
+<ul class="pure-menu-list">
+
+<li class="pure-menu-item">
+<a href="" class="pure-menu-link">Journal</a>
+</li>
+
+<li class="pure-menu-item">
+<a href="" class="pure-menu-link">Web Master</a>
+</li>
+
+</ul>
+
+</div>
+
+<h2>Professional</h2>
 
 <!-- menu -->
 <div class="pure-menu centre">
@@ -113,7 +124,7 @@
 
 </div>
 
-<h2>A Spootiful Mind</h2>
+<h2>Gaming</h2>
 
 <!-- menu -->
 <div class="pure-menu centre">
