--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 
 <h1 style="color: #ba3044;">Kenneth Forsbäck</h1>
 
+<p class="centre">1985, Ostrobothnia</p>
+
 <h2>Information</h2>
 
 <!-- menu -->
