--- a/index.html
+++ b/index.html
@@ -10,55 +10,45 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="author" content="Kenneth Forsbäck">
 <meta name="description" content="description">
+	<!-- FIXME -->
 <meta name="keywords" content="keyword, keyword, keyword">
+	<!-- FIXME -->
 
 <!-- title -->
 <title>kforsback.github.io</title>
 
 <!-- stylesheet -->
 <link rel="stylesheet" type="text/css" title="PureCSS"
-	href="purecss/pure-min.css">
+	href="media/purecss/pure-min.css">
 <link rel="stylesheet" type="text/css" title="PureCSS"
-	href="purecss/grids-responsive-min.css">
+	href="media/purecss/grids-responsive-min.css">
 <link rel="stylesheet" type="text/css" title="PureCSS"
 	href="media/index.css">
-
-<!-- favicon -->
-<!--
-<link rel="icon" type="image/png" sizes="32x32"
-	href="favicon/android-chrome-512x512.png">
-<link rel="icon" type="image/png" sizes="32x32"
-	href="favicon/android-chrome-192x192.png">
-<link rel="apple-touch-icon" sizes="180x180"
-	href="favicon/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32"
-	href="favicon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16"
-	href="favicon/favicon-16x16.png">
-<link rel="icon" type="image/x-icon"
-	href="favicon/favicon.ico">
-<link rel="manifest"
-	href="favicon/site.webmanifest">
--->
 
 </head>
 
 <body>
 
-<!-- wrapper -->
+<!-- wrapper:begin -->
 <div id="wrapper">
 
-<!-- page -->
+<!-- page:begin -->
 <div id="page">
 
-<h1 style="color: #ba3044;">Kenneth Forsbäck</h1>
+<!-- header:begin -->
+<div id="header">
 
-<p class="centre">1985, Ostrobothnia</p>
+<h1>Kenneth Forsbäck</h1>
 
-<h2>Information</h2>
+<p><em>“You shouldn’t worry about dying, instead make sure you were truly alive.”</em></p>
 
-<!-- menu -->
-<div class="pure-menu centre">
+</div>
+<!-- header:end -->
+
+<h2>Details</h2>
+
+<!-- menu:begin -->
+<div class="pure-menu">
 
 <ul class="pure-menu-list">
 
@@ -67,105 +57,93 @@
 </li>
 
 <li class="pure-menu-item">
-<a href="" class="pure-menu-link">Happening</a>
-</li>
-
-<li class="pure-menu-item">
-<a href="" class="pure-menu-link">Endeavour</a>
-</li>
-
-<li class="pure-menu-item">
 <a href="" class="pure-menu-link">Presence</a>
-</li>
-
-<li class="pure-menu-item">
-<a href="" class="pure-menu-link">Contact</a>
 </li>
 
 </ul>
 
 </div>
+<!-- menu:end -->
 
-<h2>Personal</h2>
+<h2>Endeavours</h2>
 
-<!-- menu -->
-<div class="pure-menu centre">
+<!-- menu:begin -->
+<div class="pure-menu">
 
 <ul class="pure-menu-list">
+
+<li class="pure-menu-item">
+<a href="" class="pure-menu-link">Arts</a>
+</li>
+
+<li class="pure-menu-item">
+<a href="" class="pure-menu-link">Culture</a>
+</li>
+
+<li class="pure-menu-item">
+<a href="" class="pure-menu-link">Science</a>
+</li>
+
+</ul>
+
+</div>
+<!-- menu:end -->
+
+<h2>Contact</h2>
+
+<!-- menu:begin -->
+<div class="pure-menu">
+
+<ul class="pure-menu-list">
+
+<li class="pure-menu-item">
+<a href="" class="pure-menu-link">General</a>
+</li>
+
+<li class="pure-menu-item">
+<a href="" class="pure-menu-link">Legal</a>
+</li>
+
+</ul>
+
+</div>
+<!-- menu:end -->
+
+<h2>Additional</h2>
+
+<!-- menu:begin -->
+<div class="pure-menu">
+
+<ul class="pure-menu-list">
+
+<li class="pure-menu-item">
+<a href="" class="pure-menu-link">News</a>
+</li>
 
 <li class="pure-menu-item">
 <a href="" class="pure-menu-link">Journal</a>
 </li>
 
-<li class="pure-menu-item">
-<a href="" class="pure-menu-link">Web Master</a>
-</li>
-
 </ul>
 
 </div>
+<!-- menu:end -->
 
-<h2>Professional</h2>
+<hr>
 
-<!-- menu -->
-<div class="pure-menu centre">
+<!-- footer:begin -->
+<div id="footer">
 
-<ul class="pure-menu-list">
-
-<li class="pure-menu-item">
-<a href="" class="pure-menu-link"><span class="bright">@</span> foobar.com</a>
-</li>
-
-<li class="pure-menu-item">
-<a href="" class="pure-menu-link"><span class="bright">@</span> gmail.com</a>
-</li>
-
-<li class="pure-menu-item">
-<a href="" class="pure-menu-link"><span class="bright">@</span> xabber.com</a>
-</li>
-
-</ul>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac libero sit amet odio imperdiet tincidunt ut ac augue. Fusce lectus massa, tincidunt vel sem vitae, posuere semper leo. Suspendisse mollis mi eget neque bibendum mollis.</p>
 
 </div>
-
-<h2>Gaming</h2>
-
-<!-- menu -->
-<div class="pure-menu centre">
-
-<ul class="pure-menu-list">
-
-<li class="pure-menu-item">
-<a href="" class="pure-menu-link"><span class="bright">@</span> Discord</a>
-</li>
-
-<li class="pure-menu-item">
-<a href="" class="pure-menu-link"><span class="bright">@</span> Twitter</a>
-</li>
-
-<li class="pure-menu-item">
-<a href="" class="pure-menu-link"><span class="bright">@</span> Steam</a>
-</li>
-
-<li class="pure-menu-item">
-<a href="" class="pure-menu-link"><span class="bright">@</span> GOG</a>
-</li>
-
-<li class="pure-menu-item">
-<a href="" class="pure-menu-link"><span class="bright">@</span> Battle</a>
-</li>
-
-</ul>
+<!-- footer:end -->
 
 </div>
-
-<p style="padding-top: 1rem;"></p>
-
-<p class="centre small"><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac libero sit amet odio imperdiet tincidunt ut ac augue. Fusce lectus massa, tincidunt vel sem vitae, posuere semper leo. Suspendisse mollis mi eget neque bibendum mollis.</em></p>
+<!-- page:end -->
 
 </div>
-
-</div>
+<!-- wrapper:end -->
 
 </body>
 
