--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <h1>Kenneth Forsbäck</h1>
 
-<p><em>“You shouldn’t worry about dying, instead make sure you were truly alive.”</em></p>
+<p class="quote"><em>“You shouldn’t worry about dying, instead make sure you were truly alive.”</em></p>
 
 </div>
 <!-- header:end -->
@@ -73,15 +73,15 @@
 <ul class="pure-menu-list">
 
 <li class="pure-menu-item">
-<a href="" class="pure-menu-link">Arts</a>
+<a href="arts.html" class="pure-menu-link">Arts</a>
 </li>
 
 <li class="pure-menu-item">
-<a href="" class="pure-menu-link">Culture</a>
+<a href="culture.html" class="pure-menu-link">Culture</a>
 </li>
 
 <li class="pure-menu-item">
-<a href="" class="pure-menu-link">Science</a>
+<a href="science" class="pure-menu-link">Science</a>
 </li>
 
 </ul>
