--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <h1>Kenneth Forsbäck</h1>
 
-<p class="quote"><em>“You shouldn’t worry about dying, instead make sure you were truly alive.”</em></p>
+<p class="quote"><em>“Don't whine, design”</em></p>
 
 </div>
 <!-- header:end -->
