--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <h1>Kenneth Forsbäck</h1>
 
-<p class="quote"><em>“Don't whine, design”</em></p>
+<p class="quote"><em><a href="">“Don't whine, design”</a></em></p>
 
 </div>
 <!-- header:end -->
