--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
 
 <h1>Kenneth Forsbäck</h1>
 
-<p class="quote"><em>“Don't whine, design”</em></p>
+<p><em>Finland</em></p>
+
+<p class="quote"><em>Amateur designer and engineer</em></p>
 
 </div>
 <!-- header:end -->
@@ -77,7 +79,7 @@
 </li>
 
 <li class="pure-menu-item">
-<a href="culture.html" class="pure-menu-link">Culture</a>
+<a href="heritage.html" class="pure-menu-link">Heritage</a>
 </li>
 
 <li class="pure-menu-item">
@@ -129,12 +131,8 @@
 </div>
 <!-- menu:end -->
 
-<hr>
-
 <!-- footer:begin -->
 <div id="footer">
-
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac libero sit amet odio imperdiet tincidunt ut ac augue. Fusce lectus massa, tincidunt vel sem vitae, posuere semper leo. Suspendisse mollis mi eget neque bibendum mollis.</p>
 
 </div>
 <!-- footer:end -->
