--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
@@ -10,138 +9,27 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="author" content="Kenneth Forsbäck">
 <meta name="description" content="description">
-	<!-- FIXME -->
-<meta name="keywords" content="keyword, keyword, keyword">
-	<!-- FIXME -->
+<meta name="keywords" content="kenneth, forsback, keyword">
 
 <!-- title -->
-<title>kforsback.github.io</title>
-
-<!-- stylesheet -->
-<link rel="stylesheet" type="text/css" title="PureCSS"
-	href="media/purecss/pure-min.css">
-<link rel="stylesheet" type="text/css" title="PureCSS"
-	href="media/purecss/grids-responsive-min.css">
-<link rel="stylesheet" type="text/css" title="PureCSS"
-	href="media/index.css">
+<title>Kenneth Forsbäck</title>
 
 </head>
 
+<!-- body -->
 <body>
 
-<!-- wrapper:begin -->
-<div id="wrapper">
+<h2>Kenneth Forsbäck</h2>
 
-<!-- page:begin -->
-<div id="page">
+<p>An amateur linguist, game designer, and computer engineer for two and a half decades, and born 1985 in Ostrobothnia.</p>
 
-<!-- header:begin -->
-<div id="header">
-
-<h1>Kenneth Forsbäck</h1>
-
-<p><em>Finland</em></p>
-
-<p class="quote"><em>Amateur designer and engineer</em></p>
-
-</div>
-<!-- header:end -->
-
-<h2>Details</h2>
-
-<!-- menu:begin -->
-<div class="pure-menu">
-
-<ul class="pure-menu-list">
-
-<li class="pure-menu-item">
-<a href="" class="pure-menu-link">About</a>
-</li>
-
-<li class="pure-menu-item">
-<a href="" class="pure-menu-link">Presence</a>
-</li>
-
+<ul>
+<li>E-mail: <a href="forskenn@proton.me">forskenn@proton.me</a></li>
+<li>E-mail: <a href="kforsback@gmail.com">kforsback@gmail.com</a></li>
+<li>E-mail: <a href="aspootifulmind@gmail.com">aspootifulmind@gmail.com</a></li>
+<li>GitHub: <a href="https://github.com/kforsback">kforsback</a></li>
+<li>YouTube: <a href="https://www.youtube.com/channel/UCEg2156E_tiorh0cTwgSweg">A Spootiful Mind</a></li>
 </ul>
-
-</div>
-<!-- menu:end -->
-
-<h2>Endeavours</h2>
-
-<!-- menu:begin -->
-<div class="pure-menu">
-
-<ul class="pure-menu-list">
-
-<li class="pure-menu-item">
-<a href="arts.html" class="pure-menu-link">Arts</a>
-</li>
-
-<li class="pure-menu-item">
-<a href="heritage.html" class="pure-menu-link">Heritage</a>
-</li>
-
-<li class="pure-menu-item">
-<a href="science" class="pure-menu-link">Science</a>
-</li>
-
-</ul>
-
-</div>
-<!-- menu:end -->
-
-<h2>Contact</h2>
-
-<!-- menu:begin -->
-<div class="pure-menu">
-
-<ul class="pure-menu-list">
-
-<li class="pure-menu-item">
-<a href="" class="pure-menu-link">General</a>
-</li>
-
-<li class="pure-menu-item">
-<a href="" class="pure-menu-link">Legal</a>
-</li>
-
-</ul>
-
-</div>
-<!-- menu:end -->
-
-<h2>Additional</h2>
-
-<!-- menu:begin -->
-<div class="pure-menu">
-
-<ul class="pure-menu-list">
-
-<li class="pure-menu-item">
-<a href="" class="pure-menu-link">News</a>
-</li>
-
-<li class="pure-menu-item">
-<a href="" class="pure-menu-link">Journal</a>
-</li>
-
-</ul>
-
-</div>
-<!-- menu:end -->
-
-<!-- footer:begin -->
-<div id="footer">
-
-</div>
-<!-- footer:end -->
-
-</div>
-<!-- page:end -->
-
-</div>
-<!-- wrapper:end -->
 
 </body>
 
