--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 <p>An amateur linguist, game designer, and computer engineer for two and a half decades, and born 1985 in Ostrobothnia.</p>
 
 <ul>
-<li>E-mail: <a href="forskenn@proton.me">forskenn@proton.me</a></li>
-<li>E-mail: <a href="kforsback@gmail.com">kforsback@gmail.com</a></li>
-<li>E-mail: <a href="aspootifulmind@gmail.com">aspootifulmind@gmail.com</a></li>
+<li>E-mail: <a href="mailto:forskenn@proton.me">forskenn@proton.me</a></li>
+<li>E-mail: <a href="mailto:kforsback@gmail.com">kforsback@gmail.com</a></li>
+<li>E-mail: <a href="mailto:aspootifulmind@gmail.com">aspootifulmind@gmail.com</a></li>
 <li>GitHub: <a href="https://github.com/kforsback">kforsback</a></li>
 <li>YouTube: <a href="https://www.youtube.com/channel/UCEg2156E_tiorh0cTwgSweg">A Spootiful Mind</a></li>
 </ul>
