--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 <li>E-mail: <a href="mailto:kforsback@gmail.com">kforsback@gmail.com</a></li>
 <li>E-mail: <a href="mailto:aspootifulmind@gmail.com">aspootifulmind@gmail.com</a></li>
 <li>GitHub: <a href="https://github.com/kforsback">kforsback</a></li>
+<li>Twitter: <a href="https://twitter.com/ForsbackKenneth">ForsbacKenneth</a></li>
+<li>Twitter: <a href="https://twitter.com/aspootifulmind">ASpootifulMind</a></li>
 <li>YouTube: <a href="https://www.youtube.com/channel/UCEg2156E_tiorh0cTwgSweg">A Spootiful Mind</a></li>
 </ul>
 
