--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="author" content="Kenneth Forsbäck">
 <meta name="description" content="description">
-<meta name="keywords" content="kenneth, forsback, keyword">
+<meta name="keywords" content="keywords">
 
 <!-- title -->
 <title>Kenneth Forsbäck</title>
