--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
 <h2>Kenneth Forsbäck</h2>
 
+<p><em>(A work in progress and potentially awaiting a restructuring of my accounts and aliases to make it easier to manage between personal and professional.)</em></p>
+
 <p>An amateur linguist, game designer, and computer engineer for two and a half decades, and born 1985 in Ostrobothnia.</p>
 
 <ul>
@@ -29,6 +31,7 @@
 <li>Twitter: <a href="https://twitter.com/aspootifulmind">ASpootifulMind</a></li>
 <li>YouTube: <a href="https://www.youtube.com/channel/UCEg2156E_tiorh0cTwgSweg">A Spootiful Mind</a></li>
 <li>GameDev: <a href="https://gamedev.net/kforsback/">kforsback</a></li>
+<li>Discord: <a href="discord.com/users/1017409939045613588">aspootifulmind</a></li>
 </ul>
 
 </body>
