--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 
 <ul>
 <li>GitHub: <a href="https://github.com/kforsback">kforsback</a></li>
+<li>GameDev: <a href="https://gamedev.net/kforsback/">kforsback</a></li>
 <li>Twitter: <a href="https://twitter.com/forsbackkenneth">ForsbacKenneth</a></li>
 <li>Twitter: <a href="https://twitter.com/aspootifulmind">ASpootifulMind</a></li>
 <li>YouTube: <a href="https://www.youtube.com/channel/UCEg2156E_tiorh0cTwgSweg">A Spootiful Mind</a></li>
-<li>GameDev: <a href="https://gamedev.net/kforsback/">kforsback</a></li>
-<li>Discord: <a href="https://www.discord.com/users/1017409939045613588">aspootifulmind</a></li>
+<li>Discord: <a href="https://www.discord.com/users/1017409939045613588">A Spootiful Mind</a></li>
 </ul>
 
 </body>
