--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 
+<!-- head -->
 <head>
 
 <!-- meta -->
@@ -23,7 +24,9 @@
 
 <p><em>(A work in progress and potentially awaiting a restructuring of my accounts and aliases to make it easier to manage between personal and professional.)</em></p>
 
-<p>An amateur linguist, game designer, and computer engineer for two and a half decades, and born 1985 in Ostrobothnia.</p>
+<p>An amateur in linguistocs, game design, and computer engineering for two and a half decades, and born 1985 in Ostrobothnia.</p>
+
+<h3>Contact</h3>
 
 <ul>
 <li>GitHub: <a href="https://github.com/kforsback">kforsback</a></li>
