--- a/index.html
+++ b/index.html
@@ -26,9 +26,20 @@
 
 <p>An amateur in linguistocs, game design, and computer engineering for two and a half decades, and born 1985 in Ostrobothnia.</p>
 
+<!--
+games and stories
+information and communication
+	computing, network
+culture and language
+	my ostrobothnian heritage
+-->
+
 <h3>Contact</h3>
 
 <ul>
+<li>E-mail: forskenn(a)proton.me</li>
+<li>E-mail: kforsback(a)gmail.com</li>
+<li>E-mail: aspootifulmind(a)gmail.com</li>
 <li>GitHub: <a href="https://github.com/kforsback">kforsback</a></li>
 <li>GameDev: <a href="https://gamedev.net/kforsback/">kforsback</a></li>
 <li>Twitter: <a href="https://twitter.com/forsbackkenneth">ForsbackKenneth</a></li>
