--- a/index.html
+++ b/index.html
@@ -20,27 +20,19 @@
 <!-- body -->
 <body>
 
-<h2>Kenneth Forsbäck</h2>
+<h1>Kenneth Forsbäck</h1>
 
 <p><em>(A work in progress and potentially awaiting a restructuring of my accounts and aliases to make it easier to manage between personal and professional.)</em></p>
 
-<p>An amateur in linguistocs, game design, and computer engineering for two and a half decades, and born 1985 in Ostrobothnia.</p>
+<p>An amateur in linguistics, game design, and computer engineering for two and a half decades, and born 1985 in Ostrobothnia. Self-learned and a calling in arts (games and stories), science (information and communication), and heritage (culture and language). Arts and science is for bringing beauty into the world and heritage is for preserving my beautiful language native to Finland.</p>
 
-<!--
-games and stories
-information and communication
-	computing, network
-culture and language
-	my ostrobothnian heritage
--->
-
-<h3>Contact</h3>
+<h2>Contact</h2>
 
 <ul>
 <li>GitHub: <a href="https://github.com/kforsback">kforsback</a></li>
 <li>GameDev: <a href="https://gamedev.net/kforsback/">kforsback</a></li>
 <li>Twitter: <a href="https://twitter.com/forsbackkenneth">ForsbackKenneth</a></li>
-<li>Twitter: <a href="https://twitter.com/aspootifulmind">ASpootifulMind</a></li>
+<li>Twitter: <a href="https://twitter.com/aspootifulmind">A Spootiful Mind</a></li>
 <li>YouTube: <a href="https://www.youtube.com/channel/UCEg2156E_tiorh0cTwgSweg">A Spootiful Mind</a></li>
 <li>Discord: <a href="https://www.discord.com/users/1017409939045613588">A Spootiful Mind</a></li>
 </ul>
