--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 
-<!-- head -->
 <head>
 
 <!-- meta -->
@@ -15,27 +14,88 @@
 <!-- title -->
 <title>Kenneth Forsbäck</title>
 
+<!-- style -->
+<link rel="stylesheet" href="" media="all" title="">
+<link rel="stylesheet" href="" media="screen" title="">
+<link rel="stylesheet" href="" media="print" title="">
+
+<!-- style -->
+<style>
+a {
+	color: #0000ff;
+}
+pre {
+	width: 80ch;
+	white-space: pre-wrap;
+}
+</style>
+
+<!-- script -->
+<script>
+</script>
+
 </head>
 
-<!-- body -->
 <body>
 
-<h1>Kenneth Forsbäck</h1>
+<!-- pre -->
+<pre>
+Kenneth Forsbäck
 
-<p><em>(A work in progress and potentially awaiting a restructuring of my accounts and aliases to make it easier to manage between personal and professional.)</em></p>
+(A work in progress based on project lists, on last modified times of project files, references files, and media files, on YouTube history, and on archived web pages.)
 
-<p>An amateur in linguistics, game design, and computer engineering for two and a half decades, and born 1985 in Ostrobothnia. Self-learned and a calling in arts (games and stories), science (information and communication), and heritage (culture and language). Arts and science is for bringing beauty into the world and heritage is for preserving my beautiful language native to Finland.</p>
-
-<h2>Contact</h2>
-
-<ul>
-<li>GitHub: <a href="https://github.com/kforsback">kforsback</a></li>
-<li>GameDev: <a href="https://gamedev.net/kforsback/">kforsback</a></li>
-<li>Twitter: <a href="https://twitter.com/forsbackkenneth">ForsbackKenneth</a></li>
-<li>Twitter: <a href="https://twitter.com/aspootifulmind">A Spootiful Mind</a></li>
-<li>YouTube: <a href="https://www.youtube.com/channel/UCEg2156E_tiorh0cTwgSweg">A Spootiful Mind</a></li>
-<li>Discord: <a href="https://www.discord.com/users/1017409939045613588">A Spootiful Mind</a></li>
-</ul>
+<strong>200406</strong>
+  programming language, extension, lua, pawn, quakec
+<strong>200410</strong>
+  programming language, system, c
+<strong>200411</strong>
+  programming language, stream, perl
+200508
+  package manager
+  package composer
+  package format based on earlier image format
+<strong>200509</strong>
+  calculation language, bc
+<strong>200512</strong>
+  file system format
+<strong>200512</strong>
+  file system layout
+<strong>200602</strong>
+  isa, risc, misc, cisc, mips r2000, arm7, motorola 68000, zilog z8, intel 80386
+<strong>200602</strong>
+  200602, 200705
+  32-bit risc, mips r2000, arm7
+<strong>200602</strong>
+  200602, 201411
+  16-bit risc
+<strong>200611</strong>
+  programming language, minimal, mm8 bytecode, brainfuck
+<strong>200611</strong>
+  immutable system and file system, read-only, read-prefer, read-write
+<strong>200705</strong>
+  200705, 201411
+  8-bit misc
+<strong>200712</strong>
+  programming language, spreadsheet
+<strong>200803</strong>
+  8-bit risc
+<strong>200803</strong>
+  64-bit cisc
+<strong>200803</strong>
+  128-bit cisc
+<strong>200803</strong>
+  director, c, make
+<strong>201102</strong>
+  programming language, scientific, calculation, mathcad, scilab
+<strong>201111</strong>
+  a managed system programming language inspired by Lua and C++
+<strong>201201</strong>
+  a functional programming language inspired by Lisp
+<strong>201503</strong>
+  4-bit misc
+<strong>unknown</strong>
+  programming language, system, embedded
+</pre>
 
 </body>
 
