--- a/index.html
+++ b/index.html
@@ -44,18 +44,37 @@ Kenneth Forsbäck
 
 (A work in progress based on project lists, on last modified times of project files, references files, and media files, on YouTube history, and on archived web pages.)
 
+<strong>ARTS</strong>
+
+<strong>unknown</strong>
+  games, computer, tabletop, athletic
+<strong>unknown</strong>
+  stories, writing, drawing
+
+<strong>SCIENCE</strong>
+
 <strong>200406</strong>
   programming language, extension, lua, pawn, quakec
 <strong>200410</strong>
   programming language, system, c
 <strong>200411</strong>
   programming language, stream, perl
-200508
+<strong>200504</strong>
+  digital identification card, id smart card
+<strong>200506</strong>
+  longplay, a software environment to allow games to be played on a PC like on a console, game manager, game library, fullscreen gui similar to a console
+<strong>200507</strong>
+  mesh format, textual, binary
+<strong>200507</strong>
+  satellite internet
+<strong>200508</strong>
   package manager
   package composer
-  package format based on earlier image format
+  package format
 <strong>200509</strong>
   calculation language, bc
+<strong>200511</strong>
+  augmented reality glasses
 <strong>200512</strong>
   file system format
 <strong>200512</strong>
@@ -68,15 +87,19 @@ Kenneth Forsbäck
 <strong>200602</strong>
   200602, 201411
   16-bit risc
+<strong>200602</strong>
+  optical processor
+<strong>200611</strong>
+  immutable system and file system, read-only, read-prefer, read-write
 <strong>200611</strong>
   programming language, minimal, mm8 bytecode, brainfuck
 <strong>200611</strong>
-  immutable system and file system, read-only, read-prefer, read-write
+  image format, archive
+<strong>200712</strong>
+  programming language, spreadsheet
 <strong>200705</strong>
   200705, 201411
   8-bit misc
-<strong>200712</strong>
-  programming language, spreadsheet
 <strong>200803</strong>
   8-bit risc
 <strong>200803</strong>
@@ -95,6 +118,15 @@ Kenneth Forsbäck
   4-bit misc
 <strong>unknown</strong>
   programming language, system, embedded
+
+<strong>HERITAGE</strong>
+
+<strong>unknown</strong>
+  culture
+<strong>unknown</strong>
+  language
+<strong>unknown</strong>
+  worship
 </pre>
 
 </body>
