--- a/index.html
+++ b/index.html
@@ -45,20 +45,70 @@ Kenneth Forsbäck
 (A work in progress based on project lists, on last modified times of project files, references files, and media files, on YouTube history, and on archived web pages.)
 
 <strong>ARTS</strong>
+<hr/>
+games, computer, tabletop, athletic
+stories, writing, darwing
 
-<strong>unknown</strong>
-  games, computer, tabletop, athletic
-<strong>unknown</strong>
-  stories, writing, drawing
+<strong>200107</strong>
+  ai, stealth
+<strong>200203</strong>
+  roleplaying system, might and magic 8
+  7 attributes
+  might, intellect, endurance, personality, accuracy, speed, luck
+<strong>200406</strong>
+  roleplaying system, dungeons and dragons
+  6 attributes
+  strength, dexterity, constitution, intelligence, wisdom, charisma
+<strong>200711</strong>
+  ai, social
+<strong>200806</strong>
+  roleplaying system, might and magic 8
+  4 attributes
+  might, magic, intellect, charisma
+<strong>200806</strong>
+  roleplaying system, might and magic 8
+  4 attributes
+  strength, endurance, agility, awareness
+<strong>200807</strong>
+  roleplaying system, might and magic 8
+  5 attributes
+  strength, endurance, agility, awareness, learning
+<strong>200807</strong>
+  roleplaying system, might and magic 8
+  3 attributes
+  exert, sense, apply
+<strong>201007</strong>
+  roleplaying system, bushido blade
+  3 attributes
+  force, fatigue, finesse
+<strong>201102</strong>
+  roleplaying system, the dark crystal
+  4 attributes
+  body, mind, heart, soul
+<strong>201108</strong>
+  roleplaying system, discworld
+  3 attributes
+  take, hold, give
 
 <strong>SCIENCE</strong>
+<hr/>
+computing, information
+networking, communication
+physics
+formal
 
+<strong>200212</strong>
+  network, quakenet, messaging, gaming platform
 <strong>200406</strong>
   programming language, extension, lua, pawn, quakec
+<strong>200406</strong>
+  graphical interface
 <strong>200410</strong>
   programming language, system, c
 <strong>200411</strong>
   programming language, stream, perl
+<strong>200503</strong>
+  network, disquiet
 <strong>200504</strong>
   digital identification card, id smart card
 <strong>200506</strong>
@@ -71,6 +121,8 @@ Kenneth Forsbäck
   package manager
   package composer
   package format
+<stroing>200508</strong>
+  network, deafmute
 <strong>200509</strong>
   calculation language, bc
 <strong>200511</strong>
@@ -89,6 +141,10 @@ Kenneth Forsbäck
   16-bit risc
 <strong>200602</strong>
   optical processor
+<strong>200603</strong>
+  ballistics, accurate and approximate models
+<strong>200608</strong>
+  textual interface, terminal
 <strong>200611</strong>
   immutable system and file system, read-only, read-prefer, read-write
 <strong>200611</strong>
@@ -114,19 +170,24 @@ Kenneth Forsbäck
   a managed system programming language inspired by Lua and C++
 <strong>201201</strong>
   a functional programming language inspired by Lisp
+<strong>201204</strong>
+  handheld computer, handheld pc
 <strong>201503</strong>
   4-bit misc
+<strong>201710</strong>
+  network, social reality
 <strong>unknown</strong>
   programming language, system, embedded
+<strong>unknown</strong>
+  system processing unit
+<strong>unknown</strong>
+  array processing unit
 
 <strong>HERITAGE</strong>
-
-<strong>unknown</strong>
-  culture
-<strong>unknown</strong>
-  language
-<strong>unknown</strong>
-  worship
+<hr/>
+culture
+language
+worship
 </pre>
 
 </body>
