--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ stories, writing, darwing
   4 attributes
   might, magic, intellect, charisma
 <strong>200806</strong>
-  roleplaying system, might and magic 8
+  roleplaying system, might and magic 8, gurps
   4 attributes
   strength, endurance, agility, awareness
 <strong>200807</strong>
@@ -74,7 +74,7 @@ stories, writing, darwing
   5 attributes
   strength, endurance, agility, awareness, learning
 <strong>200807</strong>
-  roleplaying system, might and magic 8
+  roleplaying system, might and magic 8, dungeons and dragons
   3 attributes
   exert, sense, apply
 <strong>201007</strong>
