--- a/index.html
+++ b/index.html
@@ -151,6 +151,10 @@ formal
   programming language, minimal, mm8 bytecode, brainfuck
 <strong>200611</strong>
   image format, archive
+<strong>200611</strong>
+  format, drawing, cad
+<strong>200612</strong>
+  volume system to replace mbr
 <strong>200705</strong>
   200705, 201411
   8-bit misc
@@ -158,6 +162,8 @@ formal
   programming language, spreadsheet
 <strong>200712</strong>
   array processing unit
+<strong>200712</strong>
+  standard, uniform time format
 <strong>200803</strong>
   8-bit risc
 <strong>200803</strong>
@@ -168,6 +174,10 @@ formal
   director, c, make
 <strong>200803</strong>
   system processing unit
+<strong>200803</strong>
+  description language, hardware, logic, verilog
+<strong>200804</strong>
+  description language, data serialisation, C, assembly
 <strong>201102</strong>
   programming language, scientific, calculation, mathcad, scilab
 <strong>201111</strong>
@@ -180,6 +190,10 @@ formal
   4-bit misc
 <strong>201710</strong>
   network, social reality
+
+<strong>2004-2006</strong>
+  AI designs inspired by ALICE, ELIZA, Ghost in the Shell, ghosts that need to learn
+
 <strong>unknown</strong>
   programming language, system, embedded
 
