--- a/index.html
+++ b/index.html
@@ -164,6 +164,8 @@ formal
   array processing unit
 <strong>200712</strong>
   standard, uniform time format
+<strong>200712</strong>
+  configuration system, C
 <strong>200803</strong>
   8-bit risc
 <strong>200803</strong>
@@ -178,6 +180,8 @@ formal
   description language, hardware, logic, verilog
 <strong>200804</strong>
   description language, data serialisation, C, assembly
+<strong>200807</strong>
+  logical layer inspired by .NET and other abstraction and virtualisation
 <strong>201102</strong>
   programming language, scientific, calculation, mathcad, scilab
 <strong>201111</strong>
@@ -192,7 +196,7 @@ formal
   network, social reality
 
 <strong>2004-2006</strong>
-  AI designs inspired by ALICE, ELIZA, Ghost in the Shell, ghosts that need to learn
+  AI designs inspired by ALICE, ELIZA, Ghost in the Shell, ghosts that need to learn, mobile device that you would take with you to allow it to learn language, process visual and aural information, etc.
 
 <strong>unknown</strong>
   programming language, system, embedded
@@ -202,6 +206,9 @@ formal
 culture
 language
 worship
+
+<strong>2012</strong>
+  heathen worship
 </pre>
 
 </body>
