--- a/index.html
+++ b/index.html
@@ -190,6 +190,8 @@ formal
   a functional programming language inspired by Lisp
 <strong>201204</strong>
   handheld computer, handheld pc
+<strong>201209</strong>
+  locale system
 <strong>201503</strong>
   4-bit misc
 <strong>201710</strong>
