--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@ formal
   16-bit risc
 <strong>200602</strong>
   optical processor
+<strong>200602</strong>
+  object code, bit code
 <strong>200603</strong>
   ballistics, accurate and approximate models
 <strong>200608</strong>
@@ -153,6 +155,8 @@ formal
   image format, archive
 <strong>200611</strong>
   format, drawing, cad
+<strong>200611</strong>
+  object code, byte code
 <strong>200612</strong>
   volume system to replace mbr
 <strong>200705</strong>
@@ -166,6 +170,10 @@ formal
   standard, uniform time format
 <strong>200712</strong>
   configuration system, C
+<strong>200712</strong>
+  object code, type code
+<strongh>200712</strong>
+  kernel
 <strong>200803</strong>
   8-bit risc
 <strong>200803</strong>
@@ -182,6 +190,8 @@ formal
   description language, data serialisation, C, assembly
 <strong>200807</strong>
   logical layer inspired by .NET and other abstraction and virtualisation
+<strong>201003</strong>
+  kernel similar to L4
 <strong>201102</strong>
   programming language, scientific, calculation, mathcad, scilab
 <strong>201111</strong>
@@ -192,6 +202,8 @@ formal
   handheld computer, handheld pc
 <strong>201209</strong>
   locale system
+<strong>201308</strong>
+  logical kernel
 <strong>201503</strong>
   4-bit misc
 <strong>201710</strong>
