--- a/index.html
+++ b/index.html
@@ -221,8 +221,13 @@ culture
 language
 worship
 
+<strong>200307</strong>
+  started researching my native ostrobothnian language, after first using it as a basis for constructed languages in roleplaying games around 2002-2003
+<strong>200501</strong>
+  my grandfather died and the seed for heathenism was planted, but I would be an atheist and an anti-Abrahamic antitheist for many years
+
 <strong>2012</strong>
-  heathen worship
+  I embraced the ancient way and heathen worship
 </pre>
 
 </body>
