--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ pre {
 <pre>
 Kenneth Forsbäck
 
-(A work in progress based on project lists, on last modified times of project files, references files, and media files, on YouTube history, and on archived web pages.)
+(A work in progress based on project lists, on last modified times of project files, references files, and media files, on YouTube history, and on archived web pages. A whole bunch of designs and unfinished stuff that make up the first 40 years of my life, the next 40 years will go to developing these designs.)
 
 <strong>ARTS</strong>
 <hr/>
