--- a/index.html
+++ b/index.html
@@ -212,6 +212,10 @@ networking, communication
 
 <strong>unknown</strong>
   programming language, system, embedded
+<strong>unknown</strong>
+  compound telescope made up of thousands of smaller mirrors
+  automated and self-maintaining system
+  sensor array system for imaging in multiple wavelengths
 
 <strong>HERITAGE</strong>
 <hr/>
