--- a/index.html
+++ b/index.html
@@ -157,6 +157,8 @@ networking, communication
   object code, byte code
 <strong>200612</strong>
   volume system to replace mbr
+<strong>200704</strong>
+  cell-based approximation of the atmosphere and the climate
 <strong>200705</strong>
   200705, 201411
   8-bit misc
@@ -184,6 +186,11 @@ networking, communication
   system processing unit
 <strong>200803</strong>
   description language, hardware, logic, verilog
+<strong>200803</strong>
+  ergō sum
+  an exercise in the great unexplainable
+  fictional equations and concepts for a science fiction constructed world
+  the ζ (zeta) paradox
 <strong>200804</strong>
   description language, data serialisation, C, assembly
 <strong>200807</strong>
