--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@ networking, communication
   volume system to replace mbr
 <strong>200704</strong>
   cell-based approximation of the atmosphere and the climate
+  started out as a means of simulating atmospheres in a science fiction space simulator game inspired by Freelancer
 <strong>200705</strong>
   200705, 201411
   8-bit misc
